# tg-remote-bot

./: .env.example  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  run.ps1  skills-lock.json  tg-remote.md
.agents/skills/anyhow/: SKILL.md
.agents/skills/anyhow/references/: context.md  error.md  macros.md
.agents/skills/clipboard-win/: SKILL.md
.agents/skills/nokhwa/: SKILL.md
.agents/skills/nokhwa/references/: camera.md  errors.md  utils.md
.agents/skills/screenshot/: SKILL.md
.agents/skills/sysinfo/: SKILL.md
.agents/skills/sysinfo/references/: process.md  system.md
.agents/skills/teloxide/: SKILL.md
.agents/skills/teloxide/references/: dispatching.md  errors.md  update-listeners.md
.agents/skills/tokio/: SKILL.md
.agents/skills/tokio/references/: net.md  overview.md  runtime.md  sync.md  task.md  time.md
.agents/skills/windows-service/: SKILL.md
.agents/skills/windows-service/references/: service.md  service_control_handler.md  (+2 more)
.agents/skills/windows-sys/: SKILL.md
.agents/skills/winreg/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/bot/: auth.rs  md.rs  mod.rs  rate_limit.rs  router.rs
src/commands/: audio.rs  camera.rs  clipboard.rs  files.rs  location.rs  mod.rs  msgbox.rs  network.rs  notify.rs  ping.rs  procs.rs  screenshot.rs  shell.rs  status.rs  sysinfo.rs  system.rs  wallpaper.rs  wifi.rs
src/machine/: identity.rs  session.rs
src/security/: dpapi.rs  mod.rs  obfuscation.rs
src/service/: config.rs  install.rs  logging.rs  mod.rs  scheduler.rs  windows_svc.rs
src/updater/: self_update.rs
(+6 files in other folders)
